[tool.poetry]
name = "tech-blog-spider"
version = "0.1.0"
description = ""
authors = ["tubone <tubo.yyyuuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
harperdb = "0.4.2"
feedparser = "6.0.11"
requests = "2.28.1"
opengraph-py3 = "0.71"
favicon = "0.7.0"
retrying = "1.3.4"
janome = "0.4.2"
beautifulsoup4 = "4.11.1"
nltk = "3.7"
black = "22.8.0"
pyyaml = "6.0"
pymongo = {extras = ["srv"], version = "^4.10.1"}
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
