[tool.poetry]
name = "tech-blog-spider"
version = "0.1.0"
description = ""
package-mode = false
authors = ["tubone <tubo.yyyuuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
harperdb = "0.4.2"
feedparser = "6.0.11"
requests = "2.32.3"
opengraph-py3 = "0.71"
favicon = "0.7.0"
retrying = "1.3.4"
janome = "0.5.0"
beautifulsoup4 = "4.13.3"
nltk = "3.9"
black = "22.8.0"
pyyaml = "6.0.2"
pymongo = {extras = ["srv"], version = "^4.10.1"}
numpy = "<2"
pybind11 = "^2.13.6"
fasttext-wheel = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
