[tool.poetry]
name = "tech-blog-spider"
version = "0.1.0"
description = ""
package-mode = false
authors = ["tubone <tubo.yyyuuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
harperdb = "0.4.2"
feedparser = "6.0.12"
requests = "2.32.5"
opengraph-py3 = "0.71"
favicon = "0.7.0"
retrying = "1.4.2"
janome = "0.5.0"
beautifulsoup4 = "4.14.2"
nltk = "3.9.3"
black = "22.8.0"
pyyaml = "6.0.3"
pymongo = {extras = ["srv"], version = "^4.10.1"}
numpy = "<2"
pybind11 = "^3.0.0"
fasttext-wheel = "^0.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
